# mqtt-learn1

./: .env-template  .gitignore  .trivyignore  README.md  client2-spec.md  docker-compose.yml  poe_tasks.toml  pyproject.toml  tpm-and-mtls.md
.github/: copilot-instructions.md  dependabot.yml
docker/1/: docker-compose.yml
docker/3/: docker-compose.yml
docker/4/: docker-compose.yml
docker/4/mosquitto/config/: mosquitto.conf
docker/5/: docker-compose.yml
docker/5/mosquitto/config/: mosquitto.conf
docker/6/: docker-compose.yml
docker/6/mosquitto/config/: mosquitto.conf
docker/tls/: docker-compose.yml
docker/tls/mosquitto/config/: mosquitto.conf
scripts/: gen_passwdfile.sh
src/mqtt_learn1/: __init__.py  client2.py  gen_passwd.py  gen_tls_certs.py  lib1.py  lib2.py  lib3.py  lib4.py  lib5.py  lib6.py  lib_common.py  pub1.py  pub3.py  pub4.py  pub5.py  pub6.py  sub1.py  sub2.py  sub3.py  sub4.py  sub5.py  sub6.py  sub_lib.py
var/tls/ca/: ca.crt
var/tls/client/: device1.crt  device1.key  device2.crt  device2.key  device3.crt  device3.key  device4.crt  device4.key  device5.crt  device5.key
var/tls/server/: server.crt  server.key
