[project]
name = "mqtt-learn1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "heiwa4126", email = "heiwa4126@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["paho-mqtt>=2.1.0", "tzdata>=2026.2"]

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[project.scripts]
mqtt-learn1 = "mqtt_learn1:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["poethepoet>=0.45.0", "pyrefly>=1.0.0", "ruff>=0.15.13"]
